# RC2040-ROMWBW

./: CMakeLists.txt  MemoryMap.MD  MemoryMap.md  RC2040P2.c  RC2040P2.elf  RC2040P2.h  RC2040P2.hex  RC2040P2.uf2  RC2040P2old.uf2  README.md  RomWBW.c  RomWBW.h  RomWBW2350.uf2  acia.c  allophones.c  cmake_install.cmake  cpmfs.c  cpmls.c  device_sdfs.c  hw_config.c  ide.c  makeboth.sh  midiNotes.h  serialfile.c  sounds.c  system.h
Binarys/: RomWBW2040.uf2  RomWBW2350.uf2  read.me
Compiling-custom-ROMWBW/: RCZ80_std_pico.asm  RCZ80_std_picoFP.asm  readme.md
Compiling_Custom_ROM_V3.6/: RCZ80_std_pico.asm  RCZ80_std_pico2FP.asm  RCZ80_std_picoFP.asm  read.me
Support Programs/: id-reader.py  id-writer.py  readme.md
libz80/: Makefile  cmake_install.cmake
sd-card/: RCZ80_std_pico.rom  diskdefs  rc2040.ini  readme.md
sd-card/DISKS/: ID File details.txt  readme.md
sd-card/DISKS/1K/: CPMIDE.id  diskdefs  readme.md
sd-card/DISKS/512/: CPMIDE.id
sd-card/ROMS/: RCZ80_std_pico2FP.rom  RCZ80_std_picoFP.rom  README.md
